syntax = "proto3";

package news_service;

option go_package = "news_service/proto";

service NewsService {
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse);
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
  rpc UpdateArticle(UpdateArticleRequest) returns (UpdateArticleResponse);
  rpc DeleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse);
  rpc ListArticles(ListArticlesRequest) returns (ListArticlesResponse);
}

message CreateArticleRequest {
  string title = 1;
  string content = 2;
  string category = 3;
  string author = 4;
}

message CreateArticleResponse {
  int32 id = 1;
}

message GetArticleRequest {
  int32 id = 1;
}

message GetArticleResponse {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string author = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UpdateArticleRequest {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string author = 5;
}

message UpdateArticleResponse {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string author = 5;
  string created_at = 6;
  string updated_at = 7;
}

message DeleteArticleRequest {
  int32 id = 1;
}

message DeleteArticleResponse {}

message ListArticlesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_by = 3;
  string sort_order = 4;
  string filter_by_category = 5;
  string filter_by_author = 6;
}

message ListArticlesResponse {
  repeated Article articles = 1;
  int32 total_count = 2;
}

message Article {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string author = 5;
  string created_at = 6;
  string updated_at = 7;
}

enum ErrorCode {
  NO_ERROR = 0;
  ARTICLE_NOT_FOUND = 1;
}

message Error {
  ErrorCode code = 1;
  string message = 2;
}
